--- a/my-navigation/index.html
+++ b/my-navigation/index.html
@@ -446,6 +446,14 @@
                             </div>
                         </a>
                     </div>
+                    <div>
+                        <a target="_blank" href="https://xydh.fun/">
+                            <div class="item">
+                                <div class="no-logo">炫猿导航</div>
+                                <div class="desc">一个导航页面</div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <!-- github地址 -->
                 <div class="box">
