--- a/my-navigation/index.html
+++ b/my-navigation/index.html
@@ -267,6 +267,12 @@
                                 <div class="no-logo">短网址生成</div>
                             </div>
                         </a>
+                        <a target="" href="">
+                            <div class="item">
+                                <div class="no-logo">谷歌api获取favicon</div>
+                                <div class="desc">http://www.google.cn/s2/favicons?domain</div>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <!-- 设计资源 -->
